# planned.day

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .coverage  Makefile  coverage.xml  main.py  pyproject.toml
backend/planned/: app.py  config.py  exceptions.py  settings.py
backend/planned/gateways/: google.py
backend/planned/objects/: __init__.py  auth_token.py  base.py  calendar.py  day.py  event.py  push_subscription.py  routine.py  task.py
backend/planned/repositories/: __init__.py  auth_token.py  base.py  calendar.py  event.py  push_subscription.py  routine.py  routine_instance.py  task.py
backend/planned/routers/: __init__.py  days.py  events.py  google.py  push_subscriptions.py  routines.py
backend/planned/scripts/: print_pdf.py  sync_calendars.py  t2s.py  test.py
backend/planned/services/: __init__.py  auth.py  calendar.py  planner.py  planning.py  push_notification.py  routine.py
backend/planned/utils/: dates.py  json.py
backend/tests/: conftest.py
backend/tests/data/events/2025-11-27/: google:gcal-family-004-family-thanksgiving-2025.json  google_calendar-gcal-family-004.json
backend/tests/data/routines/: am-dog-walk.json  gym.json
backend/tests/data/tasks/2025-11-27/: am-dog-walk-2025-11-27.json  gym-2025-11-27.json
backend/tests/repositories/: test_events.py  test_routines.py
backend/tests/routers/: test_events.py  test_tasks.py
backend/tests/services/: test_calendar.py  test_planner.py  test_planning.py  test_push_notification.py
backend/tests/services/cassettes/: test_send_notification.yaml
docs/: https-certs.md  vapid-keys.md
frontend/: .gitignore  app.config.ts  nitro.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/: app.tsx  entry-server.tsx  index.css  middleware.ts
frontend/src/components/pages/: home.tsx
frontend/src/components/settings/: categories.tsx
frontend/src/components/shared/: dateBadge.tsx  modal.tsx  multiSelect.tsx  settingsButton.tsx  timeBadge.tsx
frontend/src/components/shared/layout/: page.tsx
frontend/src/components/shared/layout/cardList/: card.tsx  container.tsx
frontend/src/components/tasks/: card.tsx  list.tsx  statusBadge.tsx
frontend/src/data/: dailyTasks.ts
frontend/src/providers/: notifications.tsx  tasks.tsx
frontend/src/routes/: [...404].tsx  index.tsx
frontend/src/routes/day/[slug]/: index.tsx  print.tsx
frontend/src/services/: tasks.ts
frontend/src/types/: api.ts  days.ts  tasks.ts
frontend/src/utils/: api.ts  dates.ts  strings.ts  tasks.ts
frontend/src/utils/localStorage/: tasks.ts
